[project]
name = "wasteful-redownload"
version = "0.0.0"
description = "Reproduction of a bug with extra indices"
authors = [
    {name = "Tom Solberg", email = "me@sbg.dev"},
]
requires-python = "~=3.8"
readme = "README.md"
license = {text = "CC-BY-SA"}

dependencies = [
    "torch==1.10.2"
]

[[tool.pdm.source]]
type = "index"
url = "https://download.pytorch.org/whl/cpu/"
name = "torch"

[tool.pdm.resolution]
respect-source-order = true

[project.urls]
repository = "https://github.com/tgolsson/pdm-repros"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
